TheXTech Changelog.

Changes for 1.3.2
-Added an own timeout sound-92 for P-Switch timer (will be played with 3 seconds before end)
-Added a level testing interprocess interface to work with PGE Editor
-Fixed the podoboo's tail effect glitch
-Fixed an incorrect priodoty of BGO65 in level file of SMBX prior to 10 format


Changes for 1.3.1 (First version made by Wohlstand in March 2020):

Technical stuff
-The whole code has been ported into C++, taking use of libFreeImageLite, SDL2, and MixerX.
-Built-in Editor has been removed in favor of PGE devkit
-Full support of UTF-8 in filename paths and internal text data (original game had the only 8bit ANSI support).
-For graphics and controlling, it uses an SDL2 library while original game have used WinAPI calls and GDI library.
-It uses PGE-FL that has a better file formats support.
-A support for WLDX world maps are allowing unlimited credits lines and custom music without necessary to use a music.ini for music replacements.
-Some LVLX exclusive features now working: vertical section wrap, two-way warps, custom "star needed" message, warp enter event, ability to disable stars printing in HUB episodes for specific door, ability to disable interscene showing when going to another level through a warp.
-Built-in support for episide and level wide music.ini and sounds.ini to override default music and sounds assets.
-World maps now supports a custom directory to store any specific resources like custom tiles/scenes/paths/levels and don't spam the episode root folder with wolrd map resources anymore.
-Default config format is INI, old config.dat format is no more supported, mainly because of incompatible key code values (SDL_Scancode versus VirtualKeys enum of Windows API).