@@ -84,7 +84,7 @@ const int maxWorldMusic = 1000;
 //Public Const numSounds As Integer = 100
 const int numSounds = 100;
 //Public Const maxSections As Integer = 20
-const int maxSections = 20;
+const int maxSections = 200;
 //Public Const maxTileType As Integer = 400
 const int maxTileType = 400;
 //Public Const maxLevelType As Integer = 100
