@@ -44,7 +44,6 @@ void CheckActive();//in game_main.cpp
 
 void GameLoop()
 {
-
     UpdateControls();
     if(LevelMacro > 0)
         UpdateMacro();
@@ -58,6 +57,13 @@ void GameLoop()
         }
     }
 
+    if(ErrorQuit)
+    {
+        EndLevel = true;
+        ErrorQuit = false;
+        pLogWarning("Quit level because of an error");
+        frmMain.clearBuffer();
+    }
 
     if(EndLevel)
     {
