@@ -4029,7 +4029,7 @@ void UpdateNPCs()
                                         BlockShakeUp(B);
 
                                     // expand down a section at the bottom of destroyed blocks
-                                    for(int B = 0; B <= maxSections; B++)
+                                    for(int B = 0; B <= numSections; B++)
                                     {
                                         auto &n = NPC[A];
                                         auto &s = level[B];
